@@ -1,7 +1,6 @@
-// navbar.js
+// statsstore.h
 //
-// Client-side routines for the navigation components of the
-// GlassPlayerHost web interface.
+// Statistics data store.
 //
 //   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
 //
@@ -19,24 +18,21 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-//
-// Main Menu Callbacks
-//
-function callPlayerControl() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_GLASSPLAYER_CONFIG;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+#ifndef STATSSTORE_H
+#define STATSSTORE_H
 
-function callIpSettings() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_IPSETTINGS;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+#include "statsvalues.h"
 
-function callStats() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_STATS;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+class StatsStore
+{
+ public:
+  StatsStore();
+  void update(const QString &str);
+  bool render(const QString &filename);
 
+ private:
+  std::map<QString,StatsValues *> store_values;
+};
+
+
+#endif  // STATSSTORE_H
