@@ -1,7 +1,6 @@
-// navbar.js
+// statsvalues.h
 //
-// Client-side routines for the navigation components of the
-// GlassPlayerHost web interface.
+// Container class for a statistics category.
 //
 //   (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
 //
@@ -19,24 +18,26 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-//
-// Main Menu Callbacks
-//
-function callPlayerControl() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_GLASSPLAYER_CONFIG;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+#ifndef STATSVALUES_H
+#define STATSVALUES_H
 
-function callIpSettings() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_IPSETTINGS;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+#include <stdio.h>
 
-function callStats() {
-    var form='';
-    form+='COMMAND='+CGI_COMMAND_SERVE_STATS;
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
-}
+#include <map>
 
+#include <QString>
+
+class StatsValues
+{
+ public:
+  StatsValues(const QString &category);
+  void update(const QString &param,const QString &value);
+  void render(FILE *f);
+
+ private:
+  QString values_category;
+  std::map<QString,QString> values_values;
+};
+
+
+#endif  // GLASSFORMATTER_H
