@@ -32,6 +32,7 @@
 #define CGI_COMMAND_COMMIT_GLASSPLAYER_CONFIG 4
 #define CGI_COMMAND_UPLOAD_FIRMWARE 5
 #define CGI_COMMAND_COMMIT_UPLOAD_FIRMWARE 6
+#define CGI_COMMAND_SERVE_STATS 7
 
 //
 // Web Colors
