@@ -29,6 +29,7 @@ CGI_COMMAND_SERVE_GLASSPLAYER_CONFIG=3;
 CGI_COMMAND_COMMIT_GLASSPLAYER_CONFIG=4;
 CGI_COMMAND_UPLOAD_FIRMWARE=5;
 CGI_COMMAND_COMMIT_UPLOAD_FIRMWARE=6;
+CGI_COMMAND_SERVE_STATS=7;
 
 //
 // Web Colors
