@@ -57,3 +57,6 @@
 	* Incremented the package version to 0.6.1.
 2016-02-16 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the glassplayer version to 0.6.4.
+2016-02-17 Fred Gleason <fredg@paravelsystems.com>
+	* Added glassformatter(1) in 'src/glassformatter/'.
+	* Added a 'Stream Statistics' page.
